[package]
name = "spacekit-log"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/spacekit-xyz/spacekit-log"
documentation = "https://spacekit.xyz/docs"
authors = ["SpaceKit Labs <info@spacekit.xyz>"]

[dependencies]
alloy-primitives = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
src = "0.0.6"
